# coreason-jules-automator

./: .pre-commit-config.yaml  AGENTS.md  EXPLANATION.md  EXPLANATION_TENACITY.md  LICENSE  NOTICE  README.md  REF_EXPLANATION.md  REPORT.md  build.xml  codecov.yml  mkdocs.yml  pyproject.toml
.github/workflows/: ci-cd.yml
docs/: architecture.md  index.md  requirements.md
src/coreason_jules_automator/: __init__.py  cli.py  config.py  container.py  di.py  events.py  exceptions.py  main.py  orchestrator.py  webapp_example.py
src/coreason_jules_automator/agent/: jules.py
src/coreason_jules_automator/async_api/: __init__.py  agent.py  llm.py  orchestrator.py  scm.py  shell.py  strategies.py
src/coreason_jules_automator/ci/: git.py  github.py
src/coreason_jules_automator/domain/: context.py  pipeline.py  scm.py
src/coreason_jules_automator/interfaces/: gemini.py
src/coreason_jules_automator/llm/: adapters.py  factory.py  janitor.py  model_manager.py  prompts.py  provider.py  types.py
src/coreason_jules_automator/protocols/: jules.py
src/coreason_jules_automator/reporters/: markdown.py
src/coreason_jules_automator/strategies/: base.py  local.py  remote.py  steps.py
src/coreason_jules_automator/templates/: janitor_professionalize.j2  janitor_summarize.j2  report.md.j2
src/coreason_jules_automator/ui/: console.py
src/coreason_jules_automator/utils/: __init__.py  logger.py  shell.py
tests/: test_agent_jules.py  test_async_api.py  test_async_orchestrator.py  test_async_scm.py  test_async_shell.py  test_async_strategies.py  test_ci_git.py  test_ci_github.py  test_cli.py  test_cli_extra.py  test_config.py  test_coverage_gap.py  test_di.py  test_di_new.py  test_events.py  test_interfaces_gemini.py  test_llm_adapters.py  test_llm_components.py  test_llm_factory.py  test_llm_factory_extra.py  test_llm_janitor.py  test_llm_model_manager.py  test_llm_prompts.py  test_llm_provider.py  test_logger.py  test_main.py  test_missing_coverage.py  test_orchestrator.py  test_orchestrator_edge_cases.py  test_protocols_jules.py  test_reporters_markdown.py  test_shell.py  test_shell_extra.py  test_shell_extra_2.py  test_steps.py  test_strategies_base.py  test_strategies_local.py  test_strategies_local_extra.py  test_strategies_remote.py  test_strategies_remote_extra.py  (+3 more)
tests/utils/: test_shell_async.py
