[tool.poetry]
name = "coreason_jules_automator"
version = "0.1.0"
description = "Coreason Jules Automator"
authors = ["Gowtham A Rao <gowtham.rao@coreason.ai>"]
license = "Prosperity-3.0"
readme = "README.md"
packages = [{include = "coreason_jules_automator", from = "src"}]

[tool.poetry.scripts]
coreason-jules-automator = "coreason_jules_automator.cli:main"

[tool.poetry.dependencies]
python = ">=3.12, <3.15"
loguru = "^0.7.2"
typer = "^0.21.1"
pydantic-settings = "^2.12.0"
openai = "^2.15.0"
llama-cpp-python = { version = "^0.3.16", optional = true }
pexpect = "^4.9.0"
huggingface-hub = "^1.3.1"
jinja2 = "^3.1.6"
fastapi = "^0.128.0"
httpx = "^0.28.1"
uvicorn = "^0.40.0"
tenacity = "^9.1.2"

[tool.poetry.extras]
local = ["llama-cpp-python"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
ruff = "^0.4.8"
pre-commit = "^3.7.1"
pytest-cov = "^5.0.0"
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.26"
mypy = "^1.19.1"
pydantic-settings = "^2.12.0"
pytest-asyncio = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "coreason_jules_automator"
version = "0.1.0"
description = "Coreason Jules Automator"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Gowtham A Rao", email = "gowtham.rao@coreason.ai" },
]
license = { file = "LICENSE" }
classifiers = [
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/CoReason-AI/coreason_jules_automator"
Repository = "https://github.com/CoReason-AI/coreason_jules_automator"
Documentation = "https://github.com/CoReason-AI/coreason_jules_automator"

[tool.ruff]
line-length = 120
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = []

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term-missing --cov-report=xml --cov-fail-under=100"
testpaths = ["tests"]

[tool.coverage.run]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
